--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "socket.io-client": "https://aistudiocdn.com/socket.io-client@^4.8.1"
+    "socket.io-client": "https://aistudiocdn.com/socket.io-client@^4.8.1",
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "http": "https://aistudiocdn.com/http@^0.0.1-security",
+    "socket.io": "https://aistudiocdn.com/socket.io@^4.8.1"
   }
 }
 </script>
