feat: Add queue position animation and disconnect handling
Enhances the controller UI with a visual animation for queue position updates. This animation triggers when a player's position in the queue changes, providing better feedback.

Introduces robust handling for player disconnections. If a player disconnects while in the queue, they are now correctly removed, and remaining players are updated on their new queue positions. This prevents stale entries and ensures accurate queue management.

Adds styling for inactive control buttons to visually indicate when player input is disabled.

Refactors player removal from the queue into a dedicated function `removePlayerFromQueue` for better code organization and reusability.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,6 +20,24 @@
   }
 }
 </script>
+<style>
+  @keyframes position-update-animation {
+    0% {
+      opacity: 0;
+      transform: translateY(0.75rem);
+    }
+    50% {
+      opacity: 1;
+      transform: translateY(-0.25rem);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  .animate-position-update {
+    animation: position-update-animation 0.5s ease-out;
+  }
+</style>
 </head>
   <body class="bg-gray-900 text-white">
     <div id="root"></div>
